Added app icon, changed UI Design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#173245</color>
     <color name="colorPrimaryDark">#173245</color>
     <color name="colorAccent">#FFF</color>
+    <color name="tumblrColor">#01203f</color>
 </resources>
