--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/tumblrColor">
 
     <ImageView
         android:id="@+id/iconito"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_download"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/dashdownicon"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
 
@@ -47,6 +47,8 @@
         android:layout_height="wrap_content"
         android:text="Download"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/txtLink"/>
+        android:layout_below="@id/txtLink"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorAccent"/>
 
 </RelativeLayout>
